--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-native-sound": "^0.11.2",
     "react-native-svg": "^14.1.0"
   },
   "devDependencies": {
