--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@react-navigation/stack": "^6.3.20",
     "react": "18.2.0",
     "react-native": "0.73.3",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.14.1",
+    "react-native-get-music-files": "^2.2.4",
+    "react-native-permissions": "^4.1.1",
     "react-native-reanimated": "^3.6.2",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^4.9.0",
